Fixing problems on smaller screens

--- a/css/slider.css
+++ b/css/slider.css
@@ -9,13 +9,9 @@
     margin: auto;
 }
 
-/* Hide the images by default */
-
 .mySlides {
     display: none;
 }
-
-/* Next & previous buttons */
 
 .prev, .next {
     cursor: pointer;
@@ -37,20 +33,14 @@
     margin-top: 15px;
 }
 
-/* Position the "next button" to the right */
-
 .next {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
-
 .prev:hover, .next:hover {
     background-color: white;
 }
-
-/* The dots/bullets/indicators */
 
 .dot {
     cursor: pointer;
@@ -66,8 +56,6 @@
 .active, .dot:hover {
     background-color: black;
 }
-
-/* Fading animation */
 
 .fade {
     -webkit-animation-name: fade;
@@ -94,8 +82,6 @@
     }
 }
 
-/* On smaller screens, decrease text size */
-
 @media only screen and (max-width: 300px) {
     .prev, .next, .text {
         font-size: 11px
@@ -106,6 +92,8 @@
     .slider {
         margin-top: 0;
         margin-right: 0;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
     .slider__dots {
@@ -118,18 +106,26 @@
         justify-content: center;
     }
 
-    .prev, .next {      
+    /* .prev, .next {      
         margin-top: auto;
         margin-bottom: auto;
+    } */
+
+    .prev {
+        left: 20%;
     }
 
-    
+    .next {
+        right: 20%;
+    }
 }
 
 @media (max-width: 550px) {
     .slider__image {
         width: 100%;
         height: auto;
+        /* margin-left: 20px;
+        margin-right: 20px; */
     }
 
     .prev, .next {
